# powersensing

./: README.md  adc.xlsx
Arduino/AnalogRead/: AnalogRead.ino
Arduino/AnalogRead3/: AnalogRead3.ino
Arduino/BlinkRGB/: BlinkRGB.ino
Arduino/BlinkSerial/: BlinkSerial.ino
Arduino/Crc16_Example/: Crc16_Example.ino
Arduino/hi221sensorpakt/: hi221sensorpakt.ino
Arduino/hi221sensorpakt1/: hi221sensorpakt1.ino
Arduino/oled_demo/: oled_demo.ino
VISensing/arduino/PowerSensing/: PowerSensing.ino
VISensing/arduino/PowerSensingR1/: PowerSensingR1.ino
VISensing/kicad/: ESP32-C3.bak  VI.bak  VI.kicad_sym  VISensing.kicad_prl  VISensing.kicad_pro  VISensing.kicad_sch
VISensing/ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/custom_msg/: CMakeLists.txt  package.xml
ros2_ws/src/custom_msg/msg/: LogTf.msg
ros2_ws/src/custom_msg1/: CMakeLists.txt
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt
ros2_ws/src/pub_sub_custom_msg/: CMakeLists.txt
ros2_ws/src/pub_sub_custom_msg/launch/: pub_sub_launch.py
ros2_ws/src/pub_sub_custom_msg/src/: pub.cpp  sub.cpp
ros2_ws/src/pub_sub_custom_msg1/: CMakeLists.txt
ros2_ws/src/pub_sub_custom_msg1/src/: pub.cpp  sub.cpp
ros2_ws/src/ros2_msg/: CMakeLists.txt  package.xml
ros2_ws/src/serial_imu/: CMakeLists.txt
ros2_ws/src/serial_imu/src/: ch_serial.c  serial_port.cpp  sub_spec.cpp
ros2_ws/src/serial_imu1/: CMakeLists.txt
ros2_ws/src/serial_imu1/launch/: imu_spec_msg.launch.py
ros2_ws/src/serial_imu1/src/: ch_serial.c  ch_serial.h  sub_spec.cpp
ros2_ws/src/serial_imu_ws/: CMakeLists.txt  package.xml
ros2_ws/src/serial_test/: CMakeLists.txt
(+169 files in other folders)
